# python-starter-repo

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
src/: main.py
