[tool.poetry]
name = "starter-repo"
version = "0.1.0"
description = ""
authors = ["markmester <mmester6016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
black = "^22.12.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pylint = "^2.15.10"
mypy = "^0.991"
pytest = "^7.2.1"

[tool.black]
    py36 = true
    include = '\.pyi?$'
    exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/'''

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "89"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
